src/test/ui/mir-dataflow/inits-1.stderr
error: rustc_peek: bit not set
  --> $DIR/inits-1.rs:14:14
   |
LL |     unsafe { rustc_peek(&ret); }
   |              ^^^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/inits-1.rs:34:14
   |
LL |     unsafe { rustc_peek(&y); }
   |              ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 3 previous errors

